--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: 'Transducer Test Oblique';
-  src: url("../fonts/TransducerTest-ExtendedRegular.otf") format("opentype");
+  font-family: 'Transducer Test Regular';
+  src: url("../fonts/TransducerTest-Regular-BF645c3dd843c3b.otf") format("opentype");
 }
 
 *{
-  font-family: 'Transducer Test Extended';
+  font-family: 'Transducer Test Regular';
 }
 
 /* .hero{
