--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -89,3 +89,13 @@
   position: absolute;
   right: 2rem;
 }
+
+.choose_head_text{
+  position: relative;
+}
+
+.choose_head_border{
+  position: absolute;
+  left: 0;
+  top: 2rem;
+}
