--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -99,3 +99,34 @@
   left: 0;
   top: 2rem;
 }
+
+
+
+
+/* arrow  */
+.stretch-arrow {
+  width: 34px;
+  height: 2px;
+  position: relative;
+  transition: 0.5s;
+}
+
+.stretch-arrow::before{
+  content: "";
+  position: absolute;
+  
+  right: -2px;
+  top: -3px;
+
+  width: 0;
+	height: 0;
+	border-top: 4px solid transparent;
+	border-left: 8px solid;
+	border-bottom: 4px solid transparent;
+
+}
+
+.stretch-btn:hover .stretch-arrow{
+  width: 54px;
+}
+
