our service bg remove and vw add

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -76,9 +76,9 @@
   height: 28rem !important;
 }
 
-.services-slider{
+/* .services-slider{
   background-image: url(../img/artboard.png);
-}
+} */
 
 
 #bg_right{
