services responsive done

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -122,4 +122,9 @@
     width: 100%;
     margin: 0 auto 0 auto;
   }
+
+  .hero-img {
+    background-image: url("../img/hero-mobile.png");
+    background-size: 100% 100%;
+  }
 }
