--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -16,6 +16,10 @@
   transition: 0.5s ease-in-out;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 .hero {
   z-index: -1;
 }
@@ -102,12 +106,12 @@
 }
 
 
-.service {
+#simulation {
   position: relative;
   text-align: center;
 }
 
-.service img {
+#simulation img {
   max-width: 100%;
   height: auto;
 }
