--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -6,11 +6,16 @@
 
 * {
   font-family: "Transducer Test Regular";
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* .hero{
     height: calc(100%-5%);
 } */
+
+
 
 #dropdown {
   transition: 0.5s ease-in-out;
