--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -201,3 +201,18 @@ html{
     background-size: 100% 100%;
   }
 }
+
+
+
+/* image lazy loading section  */
+.lazy {
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.lazy.loaded {
+  opacity: 1;
+  transition: opacity 1s ease;
+}
+
+/* image lazy loading section  */
