--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -205,14 +205,13 @@ html{
 
 
 /* image lazy loading section  */
-.lazy {
+/* .lazy {
   opacity: 0;
   transition: opacity 1s ease;
 }
 
 .lazy.loaded {
   opacity: 1;
-  transition: opacity 1s ease;
-}
+} */
 
 /* image lazy loading section  */
