--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -215,3 +215,12 @@ html{
 } */
 
 /* image lazy loading section  */
+
+
+/* services css start here  */
+.overlay-bg{
+  background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(240, 239, 239, 0) 80%);
+  opacity: 0.8;
+}
+/* services css end here  */
