--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -223,4 +223,53 @@ html{
 background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(240, 239, 239, 0) 80%);
   opacity: 0.8;
 }
+
+.overlay-bg-radial{
+  background: rgb(255,255,255);
+  background: radial-gradient(circle, rgba(255, 255, 255, 0) 0%, rgba(0,0,0,1) 100%);
+  opacity: 0.8;
+}
+
+.outer-div{
+  transition: all ease-in-out 1s;
+}
+.outer-div .inner-div{
+  transition: all ease-in-out 0.6s;
+}
+
+.outer-div::before{
+  
+  
+}
+
+.outer-div:hover .overlay{
+  background: #000;
+  opacity: 0.5;
+}
+
+.outer-div .overlay{
+  
+  position: absolute;
+  content: "";
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  transition: 0.6s ease-in-out all;
+}
+
+.outer-div:hover{
+  /* background: rgb(255,255,255);
+  background: radial-gradient(circle, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 100%); */
+  /* opacity: 0.7; */
+  /* background: #000; */
+  /* z-index: 2; */
+}
+
+.outer-div:hover .inner-div{
+  z-index: 2;
+  opacity: 1;
+}
+
 /* services css end here  */
