--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -233,14 +233,14 @@ html{
 
 
 /* image lazy loading section  */
-/* .lazy {
+.lazy {
   opacity: 0;
-  transition: opacity 1s ease;
+  transition: opacity 2s ease;
 }
 
 .lazy.loaded {
   opacity: 1;
-} */
+}
 
 /* image lazy loading section  */
 
