--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -310,3 +310,13 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(240, 239, 239, 0) 80%)
 }
 
 /* project page css end here */
+
+
+
+.lazyload {
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
+}
+.lazyloaded {
+  opacity: 1;
+}
